RESOLVED FIXED187486
WebDriver: hang when running Selenium test correct_event_firing_tests.py::testShouldEmitOnChangeEventsWhenSelectingElements[Safari]
https://bugs.webkit.org/show_bug.cgi?id=187486
Summary WebDriver: hang when running Selenium test correct_event_firing_tests.py::tes...
Blaze Burg
Reported 2018-07-09 14:51:32 PDT
Yet more nested runloop problems..
Attachments
Patch (2.30 KB, patch)
2018-07-09 14:56 PDT, Blaze Burg
thorton: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews205 for win-future (12.85 MB, application/zip)
2018-07-09 18:43 PDT, EWS Watchlist
no flags
Blaze Burg
Comment 1 2018-07-09 14:51:53 PDT
Blaze Burg
Comment 2 2018-07-09 14:56:17 PDT
EWS Watchlist
Comment 3 2018-07-09 18:43:28 PDT
Comment on attachment 344622 [details] Patch Attachment 344622 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8488470 New failing tests: http/tests/security/canvas-remote-read-remote-video-localhost.html
EWS Watchlist
Comment 4 2018-07-09 18:43:39 PDT
Created attachment 344653 [details] Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Blaze Burg
Comment 5 2018-07-10 15:41:53 PDT
Note You need to log in before you can comment on or make changes to this bug.